[package]
name = "upd_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio-stream-model = "0.10.0"
fluvio-stream-dispatcher = { version = "0.12.0", features = ["k8"] }
k8-client = "12.0.0"
tokio = { version = "1.33.0", features = ["macros"] }
fluvio-future = { version = "0.6.0" }
serde = { version = "1", features = ['derive'] }
serde_json = { version = "1" }
async-std = { version = "1.12.0", features = ["attributes"]}
anyhow = "1.0.75"